# PageRankPro

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pagerankpro.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
corpus/corpus0/: 1.html  10.html  11.html  12.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
corpus/corpus1/: api.html  blog.html  docs.html  pricing.html  search.html
docs/: deployment.md  project-scope.md
src/pagerankpro/: __init__.py  cli.py  core.py  observability.py  visualization.py
tests/e2e/: test_dashboard.py
tests/integration/: test_cli.py
tests/unit/: test_core.py  test_observability.py
