[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pagerankpro"
version = "1.0.0"
description = "A production-ready PageRank simulator with sampling, iteration, graph analysis, visualization, and reporting."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PageRankPro" }]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "matplotlib>=3.8.0",
    "networkx>=3.2.0",
    "requests>=2.32.0",
    "sentry-sdk>=2.19.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.36.0", "pandas>=2.2.0"]
dev = ["pytest>=8.0.0", "pytest-playwright>=0.5.0", "ruff>=0.5.0"]

[project.scripts]
pagerankpro = "pagerankpro.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
